--- a/popup.html
+++ b/popup.html
@@ -23,15 +23,11 @@
             font-size: 15px;
         }
 
-        .vyber_nastroju {
+        .tools-chose {
             display: flex;
             flex-direction: column;
         }
 
-        .vyber_nastroju > .nastroj{
-            width:100%;
-            margin-bottom:10px;
-        }
 
         nav{
             display:flex;
@@ -40,14 +36,6 @@
             margin: 10px;
             padding-bottom: 10px;
             border-bottom: 1px solid black;
-        }
-
-        nav > div {
-
-        }
-
-        .pointer {
-            cursor: pointer;
         }
 
         nav > div > a {
@@ -59,51 +47,15 @@
 
     <body>
 
-       <!-- <nav>
-            <div><a href="/popup.html">Nastavení</a></div>
-            <div><a href="/info.html">Informace</a></div>
-            <div><a href="" id="feedback">Zpětná vazba</a></div>
-        </nav>-->
-
-
-
         <h1>Settings</h1>
 
-        <div class="vyber_nastroju">
+        <div class="tools-chose">
 
             <p>
 
                 This tool working when you right click in page. In future there will be settings to use other tools.
 
             </p>
-
-            <!--
-            <div class="nastroj">
-                <input id="chck_seznam" class="setting_checkbox" name="chck_seznam" type="checkbox" value="false" checked>
-                <label for="chck_seznam" class="pointer" title="Přidává do výběru nástroje Seznamu">Seznam</label>
-
-            </div>
-
-            <div class="nastroj">
-                <input id="chck_marketingminer" class="setting_checkbox"  name="chck_marketingminer" type="checkbox" value="false" checked>
-                <label for="chck_marketingminer" class="pointer" >Marketing Miner</label>
-
-            </div>
-
-
-            <div class="nastroj">
-                <input id="chck_ahrefs" class="setting_checkbox"  name="chck_ahrefs" type="checkbox" value="false" checked>
-                <label for="chck_ahrefs" class="pointer" >Ahrefs</label>
-
-            </div>
-
-            <div class="nastroj">
-                <input id="chck_utility" class="setting_checkbox"  name="chck_utility" type="checkbox" value="false" checked>
-                <label for="chck_utility" class="pointer" >Malé nástroje</label>
-
-            </div>
-            -->
-
 
         </div>
     <p>By Martin Žatkovič.</p>
